# ComittoNxX

./: .gitignore  README.md  build.gradle  download_count.bat  gradle.properties  settings.gradle
.github/workflows/: release-clone-versioning.yml  release-clone.yml  release.yml
app/: build.gradle  proguard-rules.pro
app/src/debug/res/values/: string.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html  help.css  history-ja.html  history.html
app/src/main/assets/config/: cache.html  common.html  comp_list.html  config.html  epub.html  file_color.html  file_list.html  filer.html  image.html  image_detail.html  image_text.html  image_text_color.html  image_text_detail.html  noise.html  operate.html  operate_epub.html  operate_text.html  record_list.html  server.html  text.html
app/src/main/assets/config-ja/: cache.html  common.html  comp_list.html  config.html  epub.html  file_color.html  file_list.html  filer.html  image.html  image_detail.html  image_text.html  image_text_color.html  image_text_detail.html  noise.html  operate.html  operate_epub.html  operate_text.html  record_list.html  server.html  text.html
app/src/main/java/src/comitton/activity/: CropImageActivity.java  EpubActivity.java  ExpandActivity.java  FileSelectActivity.java  FontDownloadActivity.java  HelpActivity.java  ImageActivity.java  ServerActivity.java  TextActivity.java
app/src/main/java/src/comitton/common/: DEF.java  FileAccess.java  GuideView.java  ImageAccess.java  Logcat.java  MODULE.java  SimpleToast.java  TextFormatter.java  ThumbnailLoader.java
app/src/main/java/src/comitton/config/: ColorPreference.java  ExportSettingPreference.java  ImportSettingPreference.java  MenuLongTapSeekbar.java  OperationPreference.java  PageNumberPreference.java  SeekBarPreference.java  SetCacheActivity.java  SetCommonActivity.java  SetConfigActivity.java  SetEpubActivity.java  SetFileColorActivity.java  SetFileListActivity.java  SetImageActivity.java  SetImageDetailActivity.java  SetImageText.java  SetImageTextColorActivity.java  SetImageTextDetailActivity.java  SetNoiseActivity.java  SetRecorderActivity.java  SetTextActivity.java  ThumbnailPreference.java  TimeAndBatteryPreference.java
app/src/main/java/src/comitton/cropimageview/: CropImageActivity.java  CropImageView.java
app/src/main/java/src/comitton/data/: FileData.java  PictureData.java  RecordItem.java
app/src/main/java/src/comitton/dialog/: BasePageSelectDialog.java  BookmarkDialog.java  CheckDialog.java  (+26 more)
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/comitton/: Image.h  ImageAVIF.cpp  ImageBlur.cpp  ImageBright.cpp  ImageCommon.cpp  ImageGIF.cpp  ImageGray.cpp  ImageHEIF.cpp  ImageHalf.cpp  ImageInvert.cpp  ImageJPEG.cpp  ImageJXL.cpp  ImageMarginCut.cpp  ImagePNG.cpp  ImageRotate.cpp  ImageScale.cpp  ImageScaleCubic.cpp  ImageScaleHalf.cpp  ImageScaleLinear.cpp  ImageScaleNear.cpp  ImageSharpen.cpp  ImageThumbnail.cpp  ImageWebP.cpp  TextCommon.cpp  callImage.cpp  callText.cpp  callUnrar.cpp  common.h  text.h
app/src/main/jni/dav1d/: CMakeLists.txt
app/src/main/jni/dav1d/UNIX/: build.sh
app/src/main/jni/dav1d/WIN32/: aarch64-android.meson  arm-android.meson  build.bat  x86-android.meson  x86_64-android.meson
app/src/main/jni/giflib/: CMakeLists.txt
app/src/main/jni/libavif/: CMakeLists.txt
app/src/main/jni/libheif/: CMakeLists.txt
app/src/main/jni/libjpeg-turbo/: CMakeLists.txt
app/src/main/jni/libjxl/: CMakeLists.txt
app/src/main/jni/libpng/: CMakeLists.txt
app/src/main/jni/libwebp/: CMakeLists.txt
app/src/main/jni/unrar/: CMakeLists.txt  patch-unrar.bat  patch-unrar.sh  unrar.patch
app/src/main/jni/unrar/unrar/: array.hpp  errhnd.cpp  rdwrfn.cpp  rdwrfn.hpp  secpassword.cpp  suballoc.cpp  threadmisc.cpp  threadpool.cpp  timefn.cpp  unpack.cpp  unpack50mt.cpp
app/src/main/res/drawable/: add_directory.xml  add_directory_w.xml  add_favorite.xml  add_smartphone.xml  arrow_down_to_line.xml  arrow_left.xml  arrow_left_10.xml  arrow_left_100.xml  arrow_left_to_line.xml  arrow_right.xml  arrow_right_10.xml  arrow_right_100.xml  arrow_right_to_line.xml  back_arrow.xml  book_arrow_left.xml  book_arrow_left_bookmark.xml  book_arrow_right.xml  book_arrow_right_bookmark.xml  broom.xml  browser_not_supported.xml  button.xml  check.xml  config.xml  control.xml  cross_mark.xml  delete_favorite.xml  delete_history.xml  delete_thumb.xml  dialogframe.xml  dialogframe_transparent.xml  dialognoframe.xml  directory.xml  directory_tree.xml  directory_w.xml  down_arrow.xml  edittext.xml  expand_arrow.xml  expand_down_white.xml  expand_left_white.xml  expand_line_white.xml  (+57 more)
app/src/main/res/layout/: addbookmarkdialog.xml  chapterpageselect.xml  checkdialog.xml  closedialog_back.xml  closedialog_last.xml  closedialog_top.xml  cropimage.xml  downloaddialog.xml  editserverdialog.xml  editsvr.xml  epub_activity.xml  epubconfigdialog.xml  expand_item.xml  imageconfig_filter.xml  imageconfig_other.xml  imageconfigdialog.xml  imagetextconfig_footer.xml  input.xml  inputdialog.xml  listdialog.xml  listitem.xml  listview.xml  marker_input.xml  mkinput.xml  notice.xml  notice_donate.xml  operation.xml  pagenumber.xml  pageselect.xml  pagethumbnail.xml  recorditem.xml  recordlist.xml  removedialog.xml  rename.xml  serverview.xml  tabdialog.xml  textconfig_format.xml  textconfig_other.xml  textconfigdialog.xml  textinput.xml  (+3 more)
app/src/main/res/layout-land/: listview.xml  recordlist.xml
app/src/main/res/values/: colors.xml  list_define.xml  strings.xml  style.xml
app/src/main/res/values-ja/: list_define.xml  strings.xml
app/src/main/res/xml/: cache.xml  common.xml  config.xml  epub.xml  filecolor.xml  filelist.xml  image.xml  imagedetail.xml  imagetextcolor.xml  imagetextdetail.xml  noise.xml  provider_paths.xml  recorder.xml  text.xml
app/src/main/res/xml-ja/: cache.xml  common.xml  config.xml  epub.xml  filecolor.xml  filelist.xml  image.xml  imagedetail.xml  imagetextcolor.xml  imagetextdetail.xml  noise.xml  recorder.xml  text.xml
gradle/wrapper/: gradle-wrapper.properties
resources/: ComittoNxX_GimpData.xcf
(+165 files in other folders)
